fixed alignment on desktop

--- a/src/assets/scss/base/_general.scss
+++ b/src/assets/scss/base/_general.scss
@@ -20,4 +20,10 @@ p {
         justify-content: center;
         align-items: center;
     }
+
+    @include for-desktop-down {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
